--- a/dxfile/meta.yaml
+++ b/dxfile/meta.yaml
@@ -18,7 +18,7 @@ requirements:
     - h5py
 
 about:
-  home: http://tomogrid.readthedocs.org
+  home: http://dataexchange.readthedocs.org
   license: BSD
   summary: 'X-ray tomography Data Exchange'
 
