--- a/olefile/meta.yaml
+++ b/olefile/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: olefile
-  version: '0.0.5'
+  version: '0.42'
 
 source:
   git_url: https://github.com/decarlof/olefile.git
@@ -16,7 +16,7 @@ requirements:
     - python
 
 about:
-  home: http://tomogrid.readthedocs.org
+  home: https://bitbucket.org/decalage/olefileio_pl/wiki/Home
   license: BSD
-  summary: 'X-ray tomography Data Exchange'
+  summary: 'olefile is a Python package to parse, read and write Microsoft OLE2 files'
 
