--- a/data-exchange/meta.yaml
+++ b/data-exchange/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: data-exchange
-  version: '0.1.27'
+  version: '0.1'
 
 source:
   git_url: https://github.com/decarlof/data-exchange.git
@@ -34,5 +34,5 @@ requirements:
 about:
   home: http://dataexchange.readthedocs.org
   license: BSD
-  summary: 'X-ray tomography Data Exchange'
+  summary: 'Readers for various file formats. Part of tomopy a set of python routines for data analysis of x-ray tomography experiments'
 
