--- a/dxfile/meta.yaml
+++ b/dxfile/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: dxfile
-  version: '0.0.15'
+  version: '0.0.1'
 
 source:
   git_url: https://github.com/decarlof/dxfile.git
@@ -20,5 +20,5 @@ requirements:
 about:
   home: http://dataexchange.readthedocs.org
   license: BSD
-  summary: 'X-ray tomography Data Exchange'
+  summary: 'Reader for Data Exchange files part of tomopy a set of python routines for data analysis of x-ray tomography experiments'
 
