--- a/edffile/meta.yaml
+++ b/edffile/meta.yaml
@@ -3,7 +3,7 @@ package:
   version: '1.6'
 
 source:
-  git_url: https://github.com/decarlof/edffile.git
+  git_url: https://github.com/decarlof/conda-recipes.git
   
 build:
   number: 0
