--- a/edffile/meta.yaml
+++ b/edffile/meta.yaml
@@ -15,6 +15,10 @@ requirements:
   run:
     - python
 
+test:
+  imports:
+    - EdfFile
+
 about:
   home: http://pymca.sourceforge.net/
   license: BSD
