--- a/dxfile/meta.yaml
+++ b/dxfile/meta.yaml
@@ -3,7 +3,7 @@ package:
   version: '0.1'
 
 source:
-  git_url: https://github.com/decarlof/dxfile.git
+  git_url: https://github.com/decarlof/conda-recipes.git
   
 build:
   number: 0
@@ -16,6 +16,10 @@ requirements:
   run:
     - python
     - h5py
+
+test:
+  imports:
+    - data_exchange
 
 about:
   home: http://dataexchange.readthedocs.org
