--- a/tiffile/meta.yaml
+++ b/tiffile/meta.yaml
@@ -3,7 +3,7 @@ package:
   version: '2014.08.24'
 
 source:
-  git_url: https://github.com/decarlof/tifffile.git
+  git_url: https://github.com/decarlof/conda-recipes.git
 
 requirements:
   build:
