--- a/edffile/meta.yaml
+++ b/edffile/meta.yaml
@@ -11,10 +11,15 @@ build:
 requirements:
   build:
     - python
+    - setuptools
  
   run:
     - python
+    - numpy
 
+test:
+  imports:
+    - EdfFile
 
 about:
   home: http://pymca.sourceforge.net/
