--- a/spefile/meta.yaml
+++ b/spefile/meta.yaml
@@ -11,13 +11,14 @@ build:
 requirements:
   build:
     - python
+    - setuptools
  
   run:
     - python
+    - numpy
+    - scipy
+    - pylab
 
-test:
-  imports:
-    - spefile
 
 about:
   home: https://pythonhosted.org/pyspec/
