--- a/tifffile/meta.yaml
+++ b/tifffile/meta.yaml
@@ -8,7 +8,8 @@ source:
 requirements:
   build:
     - python
-    - numpy
+    - setuptools
+
   run:
     - python
     - numpy
@@ -16,6 +17,7 @@ requirements:
 test:
   imports:
     - tifffile
+pwd
 
 about:
   home: http://www.lfd.uci.edu/~gohlke/
