--- a/tifffile/meta.yaml
+++ b/tifffile/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: tifffile
-  version: '2014.08.24'
+  version: 2014.08.24
 
 source:
   git_url: https://github.com/decarlof/conda-recipes.git
@@ -8,16 +8,15 @@ source:
 requirements:
   build:
     - python
-    - setuptools
-
+    - numpy
   run:
     - python
     - numpy
 
+
 test:
   imports:
     - tifffile
-pwd
 
 about:
   home: http://www.lfd.uci.edu/~gohlke/
