--- a/olefile/meta.yaml
+++ b/olefile/meta.yaml
@@ -15,6 +15,10 @@ requirements:
   run:
     - python
 
+test:
+  imports:
+    - olefile
+
 about:
   home: https://bitbucket.org/decalage/olefileio_pl/wiki/Home
   license: BSD
