--- a/pyhdf/meta.yaml
+++ b/pyhdf/meta.yaml
@@ -1,22 +1,38 @@
 package:
-  name: pyhdf
-  version: '1.7'
+    name: pyhdf
+    version: 0.8.3
 
 source:
-  git_url: https://github.com/decarlof/pyhdf.git
-  
+    fn: pyhdf-0.8.3.tar.gz
+    url: http://sourceforge.net/projects/pysclint/files/pyhdf/0.8.3/pyhdf-0.8.3.tar.gz
+
 build:
-  number: 0
+    number: 0
 
 requirements:
-  build:
-    - python
- 
-  run:
-    - python
+    build:
+        - python
+        - distribute
+        - jpeg
+        - numpy
+        - zlib
+        - hdf4
+        - szip
+
+    run:
+        - python
+        - numpy
+        - jpeg
+        - zlib
+        - hdf4
+        - szip
+
+test:
+    imports:
+        - pyhdf
 
 about:
-  home: http://pyclint.sourceforge.net/pyhdf
-  license: BSD
-  summary: 'Reader/Writer for HDF4 files'
+    home:  http://www.sourceforge.net/projects/pysclint
+    license: Public
+
 
