--- a/olefile/meta.yaml
+++ b/olefile/meta.yaml
@@ -3,7 +3,9 @@ package:
   version: '0.42'
 
 source:
-  git_url: https://github.com/decarlof/olefile.git
+  fn: olefile-0.42.1.zip
+  url: https://bitbucket.org/decalage/olefileio_pl/downloads/olefile-0.42.1.zip
+
   
 build:
   number: 0
