--- a/hdf4/meta.yaml
+++ b/hdf4/meta.yaml
@@ -4,7 +4,7 @@ package:
 
 source:
     fn: hdf-4.2.9.tar.bz2
-    url: ftp://www.hdfgroup.org/HDF/prev-releases/HDF4.2.9/src/hdf-4.2.9.tar.bz2
+    url: http://www.hdfgroup.org/ftp/HDF/releases/HDF4.2.9/src/hdf-4.2.9.tar.bz2
     md5: c268a703f334ee4987fa710a0de9b9fc
 
 build:
