--- a/xtomo/meta.yaml
+++ b/xtomo/meta.yaml
@@ -1,9 +1,9 @@
 package:
-  name: data-exchange
+  name: xtomo
   version: '0.1.6'
 
 source:
-  git_url: https://github.com/decarlof/data-exchange.git
+  git_url: https://github.com/decarlof/conda-recipes.git
   
 build:
   number: 0
@@ -28,7 +28,7 @@ requirements:
 
 test:
   imports:
-    - dataexchange
+    - xtomo
 
 about:
   home: http://dataexchange.readthedocs.org
