--- a/fabio/meta.yaml
+++ b/fabio/meta.yaml
@@ -17,6 +17,11 @@ requirements:
     - numpy
     - pillow
 
+test:
+  # Python imports
+  imports:
+    - fabio
+
 about:
   license: GPL
   home: https://github.com/kif/fabio
